--- a/Source/HomeAutomexMobile/HomeAutomex/res/layout/activity_login.xml
+++ b/Source/HomeAutomexMobile/HomeAutomex/res/layout/activity_login.xml
@@ -1,64 +1,71 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:background="@drawable/wallpaper_residencia"
+    android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:background="@drawable/back8"
     tools:context=".LoginActivity" >
 
-    <EditText
-        android:id="@+id/editSenha"
-        android:layout_width="wrap_content"
+<ImageView
+    android:id="@+id/imageView1"
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content"
+    android:layout_weight="1"
+    android:src="@drawable/logo_marca_titulo" />
+
+    <LinearLayout
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:ems="10"
-        android:inputType="textPassword" >
+        android:layout_weight="1"
+        android:orientation="vertical" >
 
-        <requestFocus />
-    </EditText>
+        <TextView
+            android:id="@+id/textLogin"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Login"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:textColor="#fff" />
 
-    <TextView
-        android:id="@+id/textLogin"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/editLogin"
-        android:layout_alignLeft="@+id/editLogin"
-        android:text="Login"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textColor="#fff" />
+        <EditText
+            android:id="@+id/editLogin"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:textColor="#FFFFFF"
+            android:textColorHint="#FFFFFF" />
 
-    <TextView
-        android:id="@+id/textSenha"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/editSenha"
-        android:layout_alignLeft="@+id/editSenha"
-        android:text="Senha"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textColor="#fff" />
+        <TextView
+            android:id="@+id/textSenha"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Senha"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:textColor="#fff" />
 
-    <EditText
-        android:id="@+id/editLogin"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/textSenha"
-        android:layout_alignLeft="@+id/textSenha"
-        android:ems="10" />
+        <EditText
+            android:id="@+id/editSenha"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:inputType="textPassword"
+            android:textColor="#FFFFFF"
+            android:textColorHint="#FFFFFF" />
 
-    <Button
-        android:id="@+id/btnLogin"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/editSenha"
-        android:layout_marginTop="28dp"
-        android:layout_toRightOf="@+id/textSenha"
-        android:background="@layout/layout_botoes"
-        android:text="Entrar"
-        android:textColor="#fff"
-        android:textSize="15sp"  />
+        <Button
+            android:id="@+id/btnLogin"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="28dp"
+            android:background="@layout/layout_botoes"
+            android:text="Entrar"
+            android:textColor="#fff"
+            android:textSize="15sp" />
+    </LinearLayout>
 
-</RelativeLayout>
+</LinearLayout>
