--- a/Source/HomeAutomexMobile/HomeAutomex/res/layout/activity_residencias.xml
+++ b/Source/HomeAutomexMobile/HomeAutomex/res/layout/activity_residencias.xml
@@ -1,4 +1,4 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -6,26 +6,29 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:background="@drawable/back3"
+    android:background="@drawable/wallpaper_residencia"
+    android:orientation="vertical"
     tools:context=".ResidenciasActivity" >
 
      <TextView
          android:id="@+id/textBoasVindas"
-         android:layout_width="wrap_content"
-         android:layout_height="wrap_content"
+         android:layout_width="fill_parent"
+         android:layout_height="fill_parent"
          android:layout_alignParentLeft="true"
          android:layout_alignParentTop="true"
+         android:layout_weight="10"
          android:text="TextView"
          android:textColor="#fff"
          android:textSize="21sp" />
 
     <ListView
         android:id="@+id/listView1"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
         android:layout_alignLeft="@+id/textBoasVindas"
         android:layout_below="@+id/textBoasVindas"
-        android:layout_marginTop="40dp" >
+        android:layout_weight="1" >
+
     </ListView>
 
-</RelativeLayout>
+</LinearLayout>
