--- a/Source/HomeAutomexMobile/HomeAutomex/res/layout/residencia_adapter_layout.xml
+++ b/Source/HomeAutomexMobile/HomeAutomex/res/layout/residencia_adapter_layout.xml
@@ -5,46 +5,47 @@
     android:layout_height="match_parent"
     android:orientation="vertical" >
 
-    <ImageView
-        android:id="@+id/imageView1"
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:src="@drawable/homeautomex" />
+        android:orientation="horizontal" >
 
-    <TextView
-        android:id="@+id/textResidencia"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_marginLeft="36dp"
-        android:layout_marginTop="14dp"
-        android:layout_toRightOf="@+id/imageView1"
-        android:text="TextView"
-        android:textColor="#fff"
-        android:textSize="19sp" />
+        <ImageView
+            android:id="@+id/imageView1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/homeautomex" />
 
-    <TextView
-        android:id="@+id/textBairro"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/textResidencia"
-        android:layout_below="@+id/textResidencia"
-        android:layout_marginTop="16dp"
-        android:text="TextView"
-        android:textColor="#fff"
-        android:textSize="19sp" />
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:orientation="vertical" >
 
-    <TextView
-        android:id="@+id/textNumero"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/imageView1"
-        android:layout_alignLeft="@+id/textBairro"
-        android:layout_marginBottom="20dp"
-        android:text="TextView"
-        android:textColor="#fff"
-        android:textSize="19sp" />
+            <TextView
+                android:id="@+id/textResidencia"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="TextView"
+                android:textColor="#ffffff"
+                android:textSize="19sp" />
+
+            <TextView
+                android:id="@+id/textBairro"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="TextView"
+                android:textColor="#ffffff"
+                android:textSize="19sp" />
+
+            <TextView
+                android:id="@+id/textNumero"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="TextView"
+                android:textColor="#ffffff"
+                android:textSize="19sp" />
+        </LinearLayout>
+
+    </LinearLayout>
 
 </RelativeLayout>
