--- a/Source/HomeAutomexWeb/HomeAutomex/HomeAutomex/Views/Shared/_Layout.cshtml
+++ b/Source/HomeAutomexWeb/HomeAutomex/HomeAutomex/Views/Shared/_Layout.cshtml
@@ -222,7 +222,7 @@
                     <i class="icon-edit"></i>
                 </a>
                 <ul class="submenu">
-                    <i class="icon-chevron-down"></i>
+                      <li>@Html.ActionLink("Agendamento", "ListarAgendamento", "Agendamento")</li>
 
                 </ul>
             </li>
@@ -234,8 +234,9 @@
                 </a>
                 <ul class="submenu">
                     <li>@Html.ActionLink("Residência", "ListarResidencia", "Residencia")</li>
-                    <li>@Html.ActionLink("Dispositivo", "ListarDispositivo", "Dispositivo")</li>
                     <li>@Html.ActionLink("Ambiente", "ListarAmbiente", "Ambiente")</li>
+                    <li>@Html.ActionLink("Dispositivo", "ListarDispositivo", "Dispositivo")</li>
+                    <li>@Html.ActionLink("Cenário", "ListarCenario", "Cenario")</li>
 
                 </ul>
             </li>
