--- a/Source/HomeAutomexWeb/HomeAutomex/HomeAutomex/Views/Shared/_Layout.cshtml
+++ b/Source/HomeAutomexWeb/HomeAutomex/HomeAutomex/Views/Shared/_Layout.cshtml
@@ -20,6 +20,7 @@
 
     @*<link href="~/css/bootstrap.min.css" rel="stylesheet">*@
     <link href="~/css/bootstrap-switch.css" rel="stylesheet">
+    <link href="~/css/data.css" rel="stylesheet">
 
 
     <!-- global styles -->
@@ -297,5 +298,6 @@
 
     @*<script src="http://code.jquery.com/jquery-latest.js"></script>*@
     <script src="../Scripts/theme.js"></script>
+    <script src="../Scripts/data.js"></script>
 </body>
 </html>
