--- a/Source/HomeAutomexWeb/HomeAutomex/HomeAutomex/Views/Cenario/RegistrarCenario.cshtml
+++ b/Source/HomeAutomexWeb/HomeAutomex/HomeAutomex/Views/Cenario/RegistrarCenario.cshtml
@@ -19,7 +19,13 @@
             @Html.EditorFor(model => model.Descricao)
             @Html.ValidationMessageFor(model => model.Descricao)
         </div>
-
+        <div class="editor-label">
+            @Html.LabelFor(model => model.ChaveAmbiente)
+        </div>
+        <div class="editor-field">
+            @Html.DropDownListFor(model => model.ChaveAmbiente, ViewBag.Ambientes as List<SelectListItem>, "Selecione...", new { @class = "input" })
+            @Html.ValidationMessageFor(model => model.ChaveAmbiente)
+        </div>
         <p>
          <input type="submit" value="Registrar" class="btn-glow primary login" />
 
