--- a/Source/HomeAutomexWeb/HomeAutomex/HomeAutomex/Views/Agendamento/ListarAgendamento.cshtml
+++ b/Source/HomeAutomexWeb/HomeAutomex/HomeAutomex/Views/Agendamento/ListarAgendamento.cshtml
@@ -22,14 +22,9 @@
             @Html.DisplayNameFor(model => model.Ativo)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Cadastro)
+            @Html.DisplayNameFor(model => model.DataAgendamento)
         </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Altaracao)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Exclusao)
-        </th>
+        
         <th>
             @Html.DisplayNameFor(model => model.Desativado)
         </th>
@@ -49,14 +44,10 @@
             @Html.DisplayFor(modelItem => item.Ativo)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.Cadastro)
+            @Html.DisplayFor(modelItem => item.DataAgendamento)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.Altaracao)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Exclusao)
-        </td>
+
         <td>
             @Html.DisplayFor(modelItem => item.Desativado)
         </td>
