--- a/Source/HomeAutomexWeb/HomeAutomex/HomeAutomex/Views/Agendamento/EditarAgendamento.cshtml
+++ b/Source/HomeAutomexWeb/HomeAutomex/HomeAutomex/Views/Agendamento/EditarAgendamento.cshtml
@@ -23,11 +23,16 @@
         </div>
         <div class="editor-label">
             @Html.LabelFor(model => model.Ativo)
-        </div>
+        </div> 
         <div class="editor-field">
             @Html.EditorFor(model => model.Ativo)
             @Html.ValidationMessageFor(model => model.Ativo)
-        </div> <br />
+        </div>   <br />
+                      <div class="editor-field">
+            @Html.EditorFor(model => model.DataAgendamento)
+        @*    @Html.ValidationMessageFor(model => model.DataAgendamento)*@
+        </div> 
+        <br />
         <p>
               <input type="submit" value="Editar" class="btn-glow primary login" />
         </p>
