--- a/Source/HomeAutomexWeb/HomeAutomex/HomeAutomex/Views/Cenario/RegistrarCenario.cshtml
+++ b/Source/HomeAutomexWeb/HomeAutomex/HomeAutomex/Views/Cenario/RegistrarCenario.cshtml
@@ -20,11 +20,11 @@
             @Html.ValidationMessageFor(model => model.Descricao)
         </div>
         <div class="editor-label">
-            @Html.LabelFor(model => model.ChaveAmbiente)
+            @Html.LabelFor(model => model.ChaveDispositivo)
         </div>
         <div class="editor-field">
-            @Html.DropDownListFor(model => model.ChaveAmbiente, ViewBag.Ambientes as List<SelectListItem>, "Selecione...", new { @class = "input" })
-            @Html.ValidationMessageFor(model => model.ChaveAmbiente)
+            @Html.DropDownListFor(model => model.ChaveDispositivo, ViewBag.Dispositivo as List<SelectListItem>, "Selecione...", new { @class = "input" })
+            @Html.ValidationMessageFor(model => model.ChaveDispositivo)
         </div>
         <p> <br />
          <input type="submit" value="Registrar" class="btn-glow primary login" />
