--- a/Source/HomeAutomexWeb/HomeAutomex/HomeAutomex/Views/Shared/_Layout.cshtml
+++ b/Source/HomeAutomexWeb/HomeAutomex/HomeAutomex/Views/Shared/_Layout.cshtml
@@ -190,6 +190,18 @@
 
                 </ul>
             </li>
+                        <li>
+                <a class="dropdown-toggle" href="#">
+                    <i class="icon-camera-retro"></i>
+                    <span>Cenário</span>
+                    <i class="icon-chevron-down"></i>
+                </a>
+                <ul class="submenu">
+                    <li>@Html.ActionLink("Cenário", "AssociarDispositivo", "Cenario")</li>
+
+                </ul>
+            </li>
+
             <li>
                 <a class="dropdown-toggle" href="#">
                     <i class="icon-signal"></i>
@@ -210,11 +222,11 @@
                     <i class="icon-chevron-down"></i>
                 </a>
                 <ul class="submenu">
-                    <li>@Html.ActionLink("Listar Usuários", "ListarUsuario", "Account")</li>
+                    <li>@Html.ActionLink("Usuários", "ListarUsuario", "Account")</li>
 
                 </ul>
             </li>
-
+             
             <li>
                 <a class="dropdown-toggle" href="#">
 
@@ -226,6 +238,7 @@
 
                 </ul>
             </li>
+                  
             <li>
                 <a class="dropdown-toggle" href="tables.html">
                     <i class="icon-th-large"></i>
