--- a/Source/HomeAutomexWeb/HomeAutomex/HomeAutomex/Views/Cenario/ListarCenario.cshtml
+++ b/Source/HomeAutomexWeb/HomeAutomex/HomeAutomex/Views/Cenario/ListarCenario.cshtml
@@ -12,6 +12,9 @@
 </p>
 <table id="Grid" class="table table-bordered">
     <tr>
+         <th>
+            #@Html.DisplayNameFor(model => model.Chave)
+        </th>
         <th>
             @Html.DisplayNameFor(model => model.Descricao)
         </th>
@@ -19,14 +22,15 @@
         <th>
             @Html.DisplayNameFor(model => model.Desativado)
         </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Chave)
-        </th>
+       
         <th></th>
     </tr>
 
 @foreach (var item in Model) {
     <tr>
+        <td>
+            @Html.DisplayFor(modelItem => item.Chave)
+        </td>
         <td>
             @Html.DisplayFor(modelItem => item.Descricao)
         </td>
@@ -34,9 +38,7 @@
         <td>
             @Html.DisplayFor(modelItem => item.Desativado)
         </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Chave)
-        </td>
+        
         <td>
             @Html.ActionLink("Editar", "EditarCenario", new { chave = item.Chave }) |
             @Html.ActionLink("Delete", "DeleteCenario", new { chave = item.Chave })
