--- a/Source/HomeAutomexWeb/HomeAutomex/HomeAutomex/Views/Shared/_Layout.cshtml
+++ b/Source/HomeAutomexWeb/HomeAutomex/HomeAutomex/Views/Shared/_Layout.cshtml
@@ -197,7 +197,10 @@
                     <i class="icon-chevron-down"></i>
                 </a>
                 <ul class="submenu">
-                    <li>@Html.ActionLink("Cenário", "AssociarDispositivo", "Cenario")</li>
+                     <li>@Html.ActionLink("Ativar Cenário", "AtivarCenario", "Cenario")</li>
+                    <li>@Html.ActionLink("ADD Dispositivos", "AssociarDispositivo", "Cenario")</li>
+                    <li>@Html.ActionLink("Novo Cenário", "ListarCenario", "Cenario")</li>
+                     
 
                 </ul>
             </li>
@@ -249,7 +252,7 @@
                     <li>@Html.ActionLink("Residência", "ListarResidencia", "Residencia")</li>
                     <li>@Html.ActionLink("Ambiente", "ListarAmbiente", "Ambiente")</li>
                     <li>@Html.ActionLink("Dispositivo", "ListarDispositivo", "Dispositivo")</li>
-                    <li>@Html.ActionLink("Cenário", "ListarCenario", "Cenario")</li>
+                    
 
                 </ul>
             </li>
